syntax = "proto3";
option go_package = "movie/pb";

service UserService {
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}

  rpc AuthenticateUser(AuthenticateUserRequest) returns (AuthenticateUserResponse) {}
}

// ENTITIES
message User {
  uint32 id = 1;
  string email = 2;
  string name = 3;
  string password = 4;
}

message GetUsersRequest {}
message GetUsersResponse { 
  repeated User users = 1;
}

message GetUserRequest {
  uint32 id = 1;
}
message GetUserResponse {
  optional User user = 1;
}

message CreateUserRequest {
  string email = 1;
  string name = 2;
  string password = 3;
}
message CreateUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  uint32 id = 1;
  optional string email = 2;
  optional string name = 3;
  optional string password = 4;
}
message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  uint32 id = 1;
}
message DeleteUserResponse {}

message AuthenticateUserRequest {
  string email = 1;
  string password = 2;
}
message AuthenticateUserResponse {
  optional User user = 1;
}